--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,19 @@
 body 
 {
-    color: crimson;
+    color: black;
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Arial";
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
