cambio en tipo de letra a Ariel

--- a/estilos.css
+++ b/estilos.css
@@ -4,7 +4,7 @@ body
     box-shadow: blueviolet;
     color: black;
     text-align: center;
-    font-family: 'Lucida Sans';
+    font-family: 'Ariel';
 }
 #container
 {
